2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Add RPM support.
	* Makefile.am: Distribute CFSQP related files.
	* build-aux: Synchronize.
	* configure.ac: Fix package short name.
	* roboptim-core-cfsqp-plugin.spec.in: New.

2009-11-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Make sure ``sys.hh'' is included first.
	* include/roboptim/core/plugin/cfsqp.hh: Here.

2009-11-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* tests/shared-tests: Here.

2009-11-04  Thomas Moulard  <thomas.moulard@gmail.com>

	Fail instead of exiting when a gradient computation fail.
	* include/roboptim/core/plugin/cfsqp.hh,
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update build-chain.
	* .gitignore: Ignore more files.
	* .gitmodules: Remove doc from submodule.
	* Makefile.am: Use factorized rules.
	* build-aux: Synchronize.
	* configure.ac: Use git-version-gen.
	* doc/Doxyfile.extra.in: New.
	* doc/Makefile.am: New.
	* doc: Remove.
	* include/roboptim/core/plugin/cfsqp.hh:
	Fix documentation.
	* src/Makefile.am: Clean distributed files.
	* src/debug.hh: New.
	* tests/Makefile.am: Fix paths.
	* tests/common.hh: Remove.
	* tests/shared-tests: Synchronize.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Improve Visual Studio project.
	Add  vsprops to locate Boost and RobOptim.
	* msvc/INSTALL/INSTALL.vcproj: New.
	* msvc/INSTALL/excludedFiles.txt: New.
	* msvc/roboptim-core-plugin-cfsqp/boost.vsprops: New.
	* msvc/roboptim-core-plugin-cfsqp/rob_opt.vsprops: New.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-cfsqp-plugin.sln:
	Add installation project to solution.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-plugin-cfsqp.vcproj,
	* msvc/simple/simple.vcproj,
	* msvc/simplewithdll/simplewithdll.vcproj: Add Release and Debug modes.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
